# ESIN

./: README.md  test.cpp
Activity1/: main.cpp
Activity2/: main.cc  sol.cpp
Activity3/: Activitat3.cpp  main.cc
Dictionary/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  games.in  main.cpp  out1  solucio.cpp  valgrind-out.txt
Dictionary/X68607_ca/: killertest.inp
First_time/ESIN/: 013.tgz  CODIGOS  TUPUTAMADRE.cpp  delete_proves.cpp  delete_proves.e  diccionari.cpp  diccionari.hpp  driver.e  driver_esinmath.cpp  ex3_47119690g.tgz  expressio backup.cpp  expressio.cpp  expressio.hpp  expressio.rep  jp_math_sessio.res  jp_public.in  jp_public_expressio.in  jp_public_token.in  jp_racional.in  jp_racional.res  jp_token.res  jp_variables.res  maiN_racional.e  main_expressio.cpp  main_expressio.e  main_expressio_crear.cpp  main_expressio_crear.e  main_token.cpp  math_io.cpp  math_sessio.cpp  prova.cpp  (+23 more)
Session1/: Makefile  a.out  all-together.cpp  games.out  main.cc  mcj_enters.cpp  mcj_enters.hpp  mygames.out  out1  out2  sample-1.cor  sample-2.inp  test.cpp
Session2/: command
Session3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  games.in  games.out  killergames.input  killergames.output  killtest.txt  main.cpp  mcj_enters.cpp  mcj_enters.hpp  mygames.out  sample-1.inp  sample-2.cor  sample-2.inp  solucio.cpp  valgrind-command.txt  valgrind-out.txt
Session4/: llista_itr.cpp  llista_itr.hpp  main.cpp  solucio.cpp
Session5/: Makefile  main.cpp  solucio.cpp
Session6/: main.cpp
SessionPraticeActivity1/: llista.hpp  main.cpp
(+247 files in other folders)
